# english-train-sidepanel

./: .env.local.example  .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
app/: globals.css  layout.tsx  page.tsx
app/api/feedback/: route.ts
app/api/health/: route.ts
app/api/models/: route.ts
app/api/prompts/: route.ts
backend/: .env.example  README.md  app.py  convert.py  llm.py  models.py  pyproject.toml  requirements.txt  stt.py
lib/: format.ts  history.ts  types.ts
src/: manifest.json
src/background/: service-worker.ts
src/content/: youtube-caption.ts
src/sidepanel/: App.tsx  index.html
src/sidepanel/components/: CurrentSubtitle.tsx  Settings.tsx  TimelineList.tsx  UnknownRanking.tsx  WordDetail.tsx
src/sidepanel/hooks/: useCurrentSubtitle.ts  useKnownWords.ts  useVideoData.ts
src/types/: index.ts
src/utils/: ai-enricher.ts  tokenizer.ts  unknown-detector.ts  word-indexer.ts
